--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 API_ID=your_api_id
 API_HASH=your_api_hash
 BOT_TOKEN=your_bot_token
-PORT=8080
-LOG_CHANNEL=your_log_channel_id
+DATABASE_URL=sport_bot.db
+LOG_CHANNEL_ID=-100xxxxxxxxxx
