--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-API_ID=your_api_id
-API_HASH=your_api_hash
-BOT_TOKEN=your_bot_token
-DATABASE_URL=sport_bot.db
-LOG_CHANNEL_ID=-100xxxxxxxxxx
+
+  API_ID=YOUR_API_ID
+  API_HASH=YOUR_API_HASH
+  BOT_TOKEN=YOUR_BOT_TOKEN
+  MONGODB_URL=YOUR_MONGODB_URL
+  LOG_CHANNEL=-100123456789
+  REACTION_EMOJI=❤️
+  ADMIN_IDS=12345,67890 # example multiple admin id
+  
