--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
-
   API_ID=YOUR_API_ID
   API_HASH=YOUR_API_HASH
   BOT_TOKEN=YOUR_BOT_TOKEN
   MONGODB_URL=YOUR_MONGODB_URL
-  LOG_CHANNEL=-100123456789
+  LOG_CHANNEL= # Initial Log channel id is empty
   REACTION_EMOJI=❤️
-  ADMIN_IDS=12345,67890 # example multiple admin id
-  
+  ADMIN_IDS= # Initial Admin Ids List Empty
