--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,25 @@
 python-dotenv
 pyrogram
 pymongo
+
+pyrofork==2.3.48
+tgcrypto
+motor
+pyromod
+opencv-python-headless
+requests
+pytz
+flask
+telethon
+aiojobs
+werkzeug==2.2.2
+PyPDF2
+reportlab
+PyMuPDF
+cryptg
+
+Flask==1.1.2
+gunicorn==20.1.0
+Jinja2==3.0.3
+werkzeug==2.0.2
+itsdangerous==2.0.1
